"Internal implementation details"

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

filegroup(
    name = "package_content",
    srcs = glob([
        "*.bzl",
        "*.bazel",
    ]),
    visibility = ["//kubeconform/private:__pkg__"],
)

bzl_library(
    name = "kubeconform_import",
    srcs = ["import.bzl"],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "kubeconform_lint",
    srcs = ["lint.bzl"],
    visibility = ["//:__subpackages__"],
    deps = ["@bazel_skylib//lib:collections"],
)
